--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300&display=swap" rel="stylesheet">
+    <title>Spark Live</title>
 </head>
 <body>
-<h1 class="test">Document</h1>
+<div class="header">
+    <div class="container header__flex">
+        <div class="header__left__part">
+            <img src="img/logo_eng.png" alt="">
+            <div class="header_links">
+                <a href="#">Live</a>
+                <a href="#">Events</a>
+            </div>
+        </div>
+        <div class="header__part right">
+            <div class="header_links">
+                <a href="#">שידורים</a>
+                <a href="#">חיים</a>
+            </div>
+            <img src="img/logo_foreign.png" alt="">
+        </div>
+    </div>
+</div>
 </body>
 </html>
