--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="description">
+        <div>
+            <div>
+                <div><p class="title">'קדושים תהיו' | שיחה בענייני הפרשה ביידישי”ד אייר תש</p></div>
+            </div>
+            <div><p class="title_below">י”ד אייר תש”פ | 7.5.2020 | 16:30</div>
+            <div><p class="title_below">מאת ראש הישיבה מגור הגאון הרב שאול אלתר שליט"א | פרשת אחרי – קדושים תש"פ</div>
+        </div>
+        <img src="img/blue_logo.png" alt="">
+    </div>
+    <div class="content">
+        <div class="col-sm-l"></div>
+        <div class="col-sm-r">
+            <div class="blue_bottom">
+                <span>שידורנו מתחיל עוד 40 דק’</span>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
