--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@
         </div>
     </div>
 </div>
-<div class="logo">
+<div class="container">
+    <div class="logo">
+        <div class="social">
+            <a href="#"><img src="img/link.png" alt="link"></a>
+            <a href="#"><img src="img/whatsapp.png" alt="whatsapp"></a>
+            <a href="#"><img src="img/fb.png" alt="fb"></a>
+            <a href="#"><img src="img/messenger.png" alt="messenger"></a>
+            <a href="#"><img src="img/telegram.png" alt="telegram"></a>
+            <a href="#"><img src="img/gmail.png" alt="gmail"></a>
+        </div>
+        <div class="social">
+            <a href="#"><img src="img/comment.png" alt="comment"></a>
+            <a href="#"><img src="img/star.png" alt="star"></a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
